# contato_cli

./: .gitignore  .gitmodules  LICENSE  README.en.md  README.md  README.pt-br.md  pyproject.toml  requirements.txt
src/contato_cli/: __main__.py  com_contato_dict.py  exceptions.py  player.py
src/contato_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/contato_cli/player_classes/: ble_player.py  com_player.py  player.py  sc_player.py
src/contato_cli/repertorio/: apocalipse_d.json  apocalipse_d2.json  apocalipse_d3.json  apocalipse_e.json  apocalipse_e2.json  apocalipse_e3.json  canticum_corpus_d.json  canticum_corpus_e.json  canticum_corpus_e2.json  cantus_d.json  cantus_d2.json  contactus_fraternus_e.json  contactus_fraternus_perna_d.json  contatcuts_fraternus_d.json  descontato_d.json  descontato_d2.json  descontato_e.json  descontato_e2.json  descontato_gab.json  estrondo_d.json  estrondo_perna_e.json  genesis1_d.json  genesis1_e.json  genesis2_d.json  genesis3_d.json  genesis3_e.json  genesis3_jessica_d.json  genesis3_jessica_e.json  india_day_d.json  india_day_e.json  paixao_beijo_d.json  paixao_verdade_d.json  paixao_verdade_e.json  paixao_vidro_d.json  paixao_vidro_e.json  patrick_espaco_d.json  patrick_sentidos_d.json  patrick_sentidos_e.json  silencio_d.json  silencio_d2.json  (+2 more)
src/contato_cli/repertorio/buzios/: cantus_d.json  estrondo_d.json  estrondo_e.json  genesis3_d.json  genesis3_e.json  silencio_d.json  (+2 more)
src/contato_cli/util/: mac_contato_dict.py
venv-cli/: pyvenv.cfg
venv-cli/Scripts/: activate  activate.bat
