[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "contato_cli"
version = "0.0.2"
dependencies = [
  "asyncclick",
  "python-rtmidi",
  "bleak",
  "pytemidi",
  "pyserial"
]
authors = [
  {name = "Arthur Ranquine", email = "aranquine@ufrj.br"}
]
maintainers = [
  {name = "Arthur Ranquine", email = "aranquine@ufrj.br"},
  {name = "Carol Breder", email = "c.brederfigueiredo@gmail.com"}
]

[project.scripts]
contato = "contato_cli.__main__:cli"